--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <p>Through True Rich Attended does no<br> end it his mother since real had half<br> every.</p>
     </div>
     </div>
-    <div class="vertical-line"></div>
+    <div class="a-vertical-line"></div>
     <div class="flex">
     <div class="img-div">
     <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650381332/work%20images/Group_9130.png" alt="quote-2" class="process-img">
@@ -157,7 +157,7 @@
     <p>Through True Rich Attended does no<br> end it his mother since real had half<br> every.</p>
     </div>
     </div>
-    <div class="vertical-line"></div>
+    <div class="a-vertical-line"></div>
     <div class="flex">
     <div class="img-div">
     <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650381871/work%20images/Group_9131.png" alt="quote-3" class="process-img">
@@ -167,45 +167,45 @@
     <p>Through True Rich Attended does no<br> end it his mother since real had half<br> every.</p>
     </div>
     </div>
-                </div>
-            </div>
-        </div>
+    </div>
+    </div>
+    </div>
     </section>
     <section id="what-we-offer" class="background-milk-color padding-section">
-        <div class="container">
-            <h4>What we Offer</h4>
-            <h2>We offer full service auto repair & maintenance</h2>
-            <div class="flex-aligned">
-                <div class="flex">
-                    <div class="flex-box">
-                        <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650391385/work%20images/Group.png" alt="diagnotics">
-                        <p>Diagnotics</p>
-                    </div>
-                    <div class="flex-box">
-                        <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650391522/work%20images/Icon_8.png" alt="engine">
-                        <p>Engine Repair</p>
-                    </div>
-                    <div class="flex-box selected">
-                        <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650391777/work%20images/Icon_10.png" alt="wheel">
-                        <p>Wheel Repair</p>
-                    </div>
-                    <div class="flex-box">
-                        <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650392068/work%20images/Icon_11.png" alt="oil gallon">
-                        <p>Oil Filter</p>
-                    </div>
-                </div>
-            </div>
+    <div class="container">
+    <h4>What we Offer</h4>
+    <h2>We offer full service auto repair & maintenance</h2>
+    <div class="flex-aligned">
+    <div class="flex">
+    <div class="flex-box">
+    <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650391385/work%20images/Group.png" alt="diagnotics">
+    <p>Diagnotics</p>
+    </div>
+    <div class="flex-box">
+    <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650391522/work%20images/Icon_8.png" alt="engine">
+    <p>Engine Repair</p>
+    </div>
+    <div class="flex-box selected">
+    <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650391777/work%20images/Icon_10.png" alt="wheel">
+    <p>Wheel Repair</p>
+    </div>
+    <div class="flex-box">
+    <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650392068/work%20images/Icon_11.png" alt="oil gallon">
+    <p>Oil Filter</p>
+    </div>
+    </div>
+    </div>
         
-        <div class="flex-aligned">
-            <div class="flex">
-                <div class="flex-box">
-                    <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650391662/work%20images/Icon_9.png" alt="car">
-                    <p>Body Work</p>
-                </div>
-                <div class="flex-box">
-                    <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650396275/work%20images/Icon_14.png" alt="battery">
-                    <p>Batteries</p>
-                </div>
+    <div class="flex-aligned">
+    <div class="flex">
+    <div class="flex-box">
+    <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650391662/work%20images/Icon_9.png" alt="car">
+    <p>Body Work</p>
+    </div>
+    <div class="flex-box">
+    <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650396275/work%20images/Icon_14.png" alt="battery">
+    <p>Batteries</p>
+    </div>
                 <div class="flex-box">
                     <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650396335/work%20images/Icon_15.png" alt="insurance">
                     <p>Insurance Claim</p>
@@ -242,19 +242,19 @@
             <div class="finsweet-ratings">
                 <div class="flex flex-properties">
                     <div class="professional">
-                        <h4 class="rating-amount">20+</h4>
+                        <h4 class="rating">20+</h4>
                         <p>Proffesional</p>
                     </div>
                     <div class="experience">
-                        <h4 class="rating-amount">10+</h4>
+                        <h4 class="rating">10+</h4>
                         <p>Years of Experience</p>
                     </div>
                     <div class="service-closed">
-                        <h4 class="rating-amount">12K+</h4>
+                        <h4 class="rating">12K+</h4>
                         <p>Service Closed</p>
                     </div>
                     <div class="satisfaction">
-                        <h4 class="rating-amount">100%</h4>
+                        <h4 class="rating">100%</h4>
                         <p>Customer Satisfaction</p>
                     </div>
                 </div>
@@ -265,38 +265,38 @@
         <div class="container">
             <div class="our-brands">
                 <h2>Brands we Serve</h2>
-                <div class="flex brand-div">
-                    <div class="brand-img">
+                <div class="flex brand-section">
+                    <div class="brand-images">
                         <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650452342/work%20images/logo-8_1_1.png" alt="brand img">
                     </div>
-                    <div class="brand-img">
+                    <div class="brand-images">
                         <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650451343/work%20images/logo-6.png" alt="brand img">
                     </div>
-                    <div class="brand-img">
+                    <div class="brand-images">
                         <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650451787/work%20images/logo-7_1.png" alt="brand img">
                     </div>
-                    <div class="brand-img">
+                    <div class="brand-images">
                         <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650452445/work%20images/logo-3.png" alt="brand img">
                     </div>
-                    <div class="brand-img">
+                    <div class="brand-images">
                         <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650452453/work%20images/logo-1_1.png" alt="brand img">
                     </div>
                 </div>
                 <div class="our-brands">
                     <div class="flex brand-div">
-                        <div class="brand-img">
+                        <div class="brand-images">
                             <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650452342/work%20images/logo-8_1_1.png" alt="brand img">
                         </div>
-                        <div class="brand-img">
+                        <div class="brand-images">
                             <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650451343/work%20images/logo-6.png" alt="brand img">
                         </div>
-                        <div class="brand-img">
+                        <div class="brand-images">
                             <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650451787/work%20images/logo-7_1.png" alt="brand img">
                         </div>
-                        <div class="brand-img">
+                        <div class="brand-images">
                             <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650452445/work%20images/logo-3.png" alt="brand img">
                         </div>
-                        <div class="brand-img">
+                        <div class="brand-images">
                             <img src="https://res.cloudinary.com/lovelyfin00/image/upload/v1650452453/work%20images/logo-1_1.png" alt="brand img">
                         </div>
                     </div>
